--- a/.github/workflows/helloworld_2.yml
+++ b/.github/workflows/helloworld_2.yml
@@ -37,5 +37,5 @@ jobs:
           
       - name: Show date and time
         run: echo "TODAY = $(date + %y-%m-%d)" >> $GITHUB_ENV
-        run: echo Hello World, today is TODAY
+             echo Hello World, today is TODAY
           
